# TTI-Worker

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  env.list.sample  environment.yaml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: flake8.yml
src/: enums.py  ml_model.py  schemas.py  tasks.py  utils.py  worker.py
src/configs/: celery_config.py  config.py
testvenv/: pyvenv.cfg
tti_worker/: constants.py  enums.py  ml_model.py  schemas.py  tasks.py  test.py  utils.py  worker.py
tti_worker/configs/: config.py
tti_worker/ldm/models/: autoencoder.py
tti_worker/ldm/models/diffusion/: classifier.py  ddim.py  ddpm.py  plms.py
tti_worker/ldm/modules/: attention.py
tti_worker/ldm/modules/diffusionmodules/: model.py  openaimodel.py  util.py
tti_worker/ldm/modules/encoders/: modules.py
tti_worker/ldm/modules/image_degradation/: bsrgan.py  bsrgan_light.py
tti_worker/ldm/modules/losses/: contperceptual.py  vqperceptual.py
tti_worker/payloads/: response.py
tti_worker/taming/data/: ade20k.py  annotated_objects_coco.py  annotated_objects_dataset.py  annotated_objects_open_images.py  coco.py  custom.py  faceshq.py  image_transforms.py  imagenet.py  utils.py
tti_worker/taming/data/conditional_builder/: objects_bbox.py  objects_center_points.py
tti_worker/taming/models/: cond_transformer.py  vqgan.py
tti_worker/taming/modules/discriminator/: model.py
tti_worker/taming/modules/losses/: lpips.py  vqperceptual.py
