[tool.black]
line-length = 119
target-version = ["py38"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true

line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true

[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["YoungJae Kim <corea_kyj@naver.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
celery = "^5.2.7"
redis = "4.3.4"
pydantic = "^1.9.2"
torch = "^1.12.1"
loguru = "^0.6.0"
omegaconf = "^2.2.3"
open-clip-torch = "^1.3.0"
einops = "^0.4.1"
huggingface-hub = "^0.9.0"
pytorch-lightning = "^1.7.2"
transformers = "^4.21.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"